...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />

        <TextView
            android:id="@+id/plant_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@{viewModel.plantDate}"
...
